package org.formation.projet_somkhit_willy;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;
import org.springframework.context.annotation.EnableAspectJAutoProxy;

@SpringBootApplication
@EnableAspectJAutoProxy
public class ProjetSomkhitWillyApplication {

    public static void main(String[] args) {
        SpringApplication.run(ProjetSomkhitWillyApplication.class, args);
    }

}
