package org.formation.projet_somkhit_willy.repository;

import org.formation.projet_somkhit_willy.entity.Client;
import org.springframework.data.jpa.repository.JpaRepository;


public interface ClientRepository extends JpaRepository<Client, Long> {
}
