package org.formation.projet_somkhit_willy.repository;

import org.formation.projet_somkhit_willy.entity.SavingAccount;
import org.springframework.data.jpa.repository.JpaRepository;

public interface SavingAccountRepository extends JpaRepository<SavingAccount, Long> {
}